[package]
name = "polyhooks"
description = "Vendored fork of j178/prek: a fast, pure-Rust git hook manager (drop-in alternative to pre-commit)."
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>", "j178 <hi@j178.dev>"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# Vendored from j178/prek, which is MIT-licensed. See NOTICE and LICENSE.
license = "MIT"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.cargo-shear]
ignored = ["liblzma"]

# liblzma is a build-time feature enabler (static xz linking for
# async-compression's `xz` feature); it is never named in a `use`, so machete
# cannot see it.
[package.metadata.cargo-machete]
ignored = ["liblzma"]

# Keep the binary named `prek` for now: the vendored integration tests and the
# shell-completion snapshots locate the binary via `CARGO_BIN_EXE_prek` /
# `NEXTEST_BIN_EXE_prek`. Renaming into the `poly` family is a later task.
[[bin]]
name = "prek"
path = "src/main.rs"

[features]
default = ["docker"]
# Adds self-update functionality. Only enabled for prek-built binaries;
# left unselected when building for package managers.
self-update = ["dep:axoupdater"]
# Enable the profiler for benchmarking.
profiler = ["dep:pprof", "pprof/flamegraph"]
# Enable docker related tests in integration tests.
docker = []
# Enable generation of JSON schema.
schemars = ["dep:schemars"]

[dependencies]
aho-corasick = { workspace = true }
annotate-snippets = { workspace = true }
anstream = { workspace = true }
anstyle-query = { workspace = true }
anyhow = { workspace = true }
async-compression = { workspace = true }
async_zip = { workspace = true }
axoupdater = { workspace = true, optional = true }
bstr = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["env", "string", "wrap_help"] }
clap_complete = { workspace = true }
console = { workspace = true }
ctrlc = { workspace = true }
dunce = { workspace = true }
etcetera = { workspace = true }
fancy-regex = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
json5 = { workspace = true }
# Enable static linking for liblzma (required for the `xz` feature in
# async-compression).
liblzma = { workspace = true }
mea = { workspace = true }
memchr = { workspace = true }
owo-colors = { workspace = true }
phf = { workspace = true }
quick-xml = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
same-file = { workspace = true }
schemars = { workspace = true, optional = true }
seahash = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true, features = ["unbounded_depth"] }
serde_stacker = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
strum = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tar = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true, features = ["parse", "serde", "preserve_order"] }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-width = { workspace = true }
walkdir = { workspace = true }
webpki-root-certs = { workspace = true }
which = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
pprof = { workspace = true, optional = true }
rustix = { workspace = true }

[build-dependencies]
fs-err = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
etcetera = { workspace = true }
insta = { workspace = true, features = ["filters"] }
insta-cmd = { workspace = true }
markdown = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
textwrap = { workspace = true }

# Lint posture vendored from upstream prek's `[workspace.lints]` so that
# `cargo clippy -D warnings` matches upstream's accepted baseline.
[lints.rust]
dead_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
collapsible_else_if = "allow"
collapsible_if = "allow"
if_not_else = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"
items_after_statements = "allow"
iter-without-into-iter = "allow"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
