[package]
name = "polylint-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core engine for the polylint/polyfmt universal, zero-dependency linter & formatter"

[package.metadata.cargo-machete]
# rumdl's lib crate name is rumdl_lib and serde_toon_format's lib crate name is
# serde_toon; cargo-machete cannot detect the usage via the package name.
ignored = ["rumdl", "serde_toon_format"]

[lib]
name = "polylint_core"
path = "src/lib.rs"

[dependencies]
alejandra.workspace = true
anyhow.workspace = true
blake3.workspace = true
graphql-parser.workspace = true
ignore.workspace = true
malva.workspace = true
markup_fmt.workspace = true
owo-colors.workspace = true
# oxc backend (M2) — all published crates, no git deps
oxc_allocator.workspace = true
oxc_codegen.workspace = true
oxc_parser.workspace = true
oxc_span.workspace = true
rayon.workspace = true
ruff_formatter.workspace = true
ruff_python_formatter.workspace = true
ruff_python_parser.workspace = true
ruff_source_file.workspace = true
rumdl.workspace = true
saphyr.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_toon_format.workspace = true
sqruff-lib.workspace = true
sqruff-lib-core.workspace = true
taplo.workspace = true
toml.workspace = true
tree-sitter-language-pack.workspace = true
typos.workspace = true
typos-dict.workspace = true
unicase.workspace = true

[dev-dependencies]
insta.workspace = true
owo-colors.workspace = true
tempfile.workspace = true
