[package]
name = "polylint-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core engine for the polylint/polyfmt universal, zero-dependency linter & formatter"

[package.metadata.cargo-machete]
# rumdl's lib crate name is rumdl_lib and serde_toon_format's lib crate name is
# serde_toon; cargo-machete cannot detect the usage via the package name.
ignored = ["rumdl", "serde_toon_format"]

[lib]
name = "polylint_core"
path = "src/lib.rs"

[dependencies]
alejandra.workspace = true
anyhow.workspace = true
blake3.workspace = true
graphql-parser.workspace = true
ignore.workspace = true
mago-allocator.workspace = true
mago-database.workspace = true
mago-formatter.workspace = true
mago-linter.workspace = true
mago-names.workspace = true
mago-php-version.workspace = true
mago-reporting.workspace = true
mago-span.workspace = true
mago-syntax.workspace = true
mago-text-edit.workspace = true
malva.workspace = true
markup_fmt.workspace = true
owo-colors.workspace = true
# oxc backend (M2 + oxlint) — all git deps pinned to the same rev (see workspace Cargo.toml)
oxc_allocator.workspace = true
oxc_diagnostics.workspace = true
oxc_formatter.workspace = true
oxc_formatter_core.workspace = true
oxc_formatter_json.workspace = true
oxc_linter.workspace = true
oxc_span.workspace = true
pretty_graphql.workspace = true
pretty_yaml.workspace = true
rayon.workspace = true
# ruff git deps — all pinned to the same rev (see workspace Cargo.toml)
ruff_db.workspace = true
ruff_formatter.workspace = true
ruff_linter.workspace = true
ruff_python_ast.workspace = true
ruff_python_formatter.workspace = true
ruff_text_size.workspace = true
rumdl.workspace = true
saphyr.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_toon_format.workspace = true
sqruff-lib.workspace = true
sqruff-lib-core.workspace = true
taplo.workspace = true
toml.workspace = true
tree-sitter-language-pack.workspace = true
typos.workspace = true
typos-dict.workspace = true
unicase.workspace = true

[dev-dependencies]
insta.workspace = true
owo-colors.workspace = true
tempfile.workspace = true
